# geemake

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
geemake/: environment.yaml  wrapper.py
src/geemake/: __main__.py  geemake.py  utils.py
tests/mixed_ee_and_non_ee_rules/: add_census_info.py  config.yaml  get_smallest_city.py  snakefile  test_mixed_rules.py
tests/multiple_rules/: config.yaml  snakefile  test_multiple_rules.py
tests/multiple_rules/scripts/: buffer_cities.py  get_intersections.py  split_cities.py
tests/non_ee_rules/: snakefile  test_non_ee_rules.py
tests/single_rule/: single_rule.py  snakefile  test_single_rule.py
