[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "geemake"
authors = [{name = "Rylan Boothman"}]
description = "Tool to allow Snake Make to work with Google Earth Engine assets"
version = "0.0.1"
requires-python = "==3.9.*"
dependencies = ["geemap", "snakemake"]

[project.scripts]
geemake = "geemake.__main__:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
